site/content/docs/5.3/customize/options.md
---
layout: docs
title: Параметры
description: Быстро настройте Bootstrap с помощью встроенных переменных, чтобы легко переключать глобальные настройки CSS для управления стилем и поведением.
group: customize
---

Настройте Bootstrap с помощью нашего встроенного файла пользовательских переменных и легко переключайте глобальные настройки CSS с помощью новых переменных Sass `$enable-*`. Замените значение переменной и при необходимости перекомпилируйте с помощью `npm run test`.

Вы можете найти и настроить эти переменные для ключевых глобальных параметров в файле Bootstrap `scss/_variables.scss`.

{{< bs-table "table table-options" >}}
| Переменная                     | Значения                           | Описание                                                                               |
| ------------------------------ | ---------------------------------- | -------------------------------------------------------------------------------------- |
| `$spacer` | `1rem` (по умолчанию) или любое значение > 0 | Указывает значение спейсера по умолчанию для программного создания наших [утилит спейсера]({{< docsref "/utilities/spacing" >}}). |
| `$enable-dark-mode` | `true` (по умолчанию) или `false` | Включает встроенную [поддержку темного режима]({{< docsref "/customize/color-modes#dark-mode" >}}) для всего проекта и его компонентов. |
| `$enable-rounded` | `true` (по умолчанию) или `false` | Включает предопределенные стили `border-radius` для различных компонентов. |
| `$enable-shadows` | `true` или `false` (по умолчанию) | Включает предопределенные декоративные стили `box-shadow` для различных компонентов. Не влияет на `box-shadow`, используемые для состояний фокуса. |
| `$enable-gradients` | `true` или `false` (по умолчанию) | Включает предопределенные градиенты через стили `background-image` для различных компонентов. |
| `$enable-transitions` | `true` (по умолчанию) или `false` | Включает предопределенные `transition`s для различных компонентов. |
| `$enable-reduced-motion` | `true` (по умолчанию) или `false` | Включает медиа-запрос [`prefers-reduced-motion`]({{< docsref "/getting-started/accessibility#reduced-motion" >}}), который подавляет определенные анимации/переходы на основе настроек браузера/операционной системы пользователя. |
| `$enable-grid-classes` | `true` (по умолчанию) или `false` | Включает генерацию классов CSS для системы сетки (например, `.row`, `.col-md-1` и т. д.). |
| `$enable-cssgrid` | `true` или `false` (по умолчанию) | Включает экспериментальную систему CSS Grid (например, `.grid`, `.g-col-md-1` и т. д.). |
| `$enable-container-classes` | `true` (по умолчанию) или `false` | Включает генерацию классов CSS для контейнеров макета. (Новое в v5.2.0) |
| `$enable-caret` | `true` (по умолчанию) или `false` | Включает псевдоэлемент каретки на `.dropdown-toggle`. |
| `$enable-button-pointers` | `true` (по умолчанию) или `false` | Добавить курсор «рука» к неотключенным элементам кнопок. |
| `$enable-rfs` | `true` (по умолчанию) или `false` | Глобально включает [RFS]({{< docsref "/getting-started/rfs" >}}). |
| `$enable-validation-icons` | `true` (по умолчанию) или `false` | Включает значки `background-image` в текстовых полях ввода и некоторых пользовательских формах для состояний проверки. |
| `$enable-negative-margins` | `true` или `false` (по умолчанию) | Включает генерацию [утилиты отрицательного поля]({{< docsref "/utilities/spacing#negative-margin" >}}). |
| `$enable-deprecation-messages` | `true` (по умолчанию) или `false` | Установите `false`, чтобы скрыть предупреждения при использовании любых устаревших миксинов и функций, которые планируется удалить в `v6`. |
| `$enable-important-utilities` | `true` (по умолчанию) или `false` | Включает суффикс `!important` в классах утилит. |
| `$enable-smooth-scroll` | `true` (по умолчанию) или `false` | Применяет `scroll-behavior: smooth` глобально, за исключением пользователей, запрашивающих уменьшенное движение с помощью медиазапроса [`prefers-reduced-motion`]({{< docsref "/getting-started/accessibility#reduced-motion" >}}) |
{{< /bs-table >}}
